# crewai

./: README.md  main.py  pyproject.toml
card_creator/: __init__.py  cli.py  config.py  crew.py  html_renderer.py  pexels.py  prompts.py  requirements.py
tests/: test_crew.py  test_html_renderer.py  test_prompts.py  test_requirements.py
