[project]
name = "card-creator"
version = "0.1.0"
description = "CrewAI powered assistant for designing cards for any occasion."
authors = [{ name = "AI Assistant" }]
requires-python = ">=3.10"
dependencies = [
  "crewai>=0.51.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
card-crew = "card_creator.cli:run"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
